<resources>
    <string name="app_name">Quiz App</string>
    <string name="todo">ToDo</string>
    <string name="score">Score</string>
    <string name="ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmenta">FragmentA</string>
    <string name="play">Play</string>
    <string name="quiz_app">Quiz App</string>
    <string name="fragment_b">Fragment B</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="next_question">Next Question</string>
    <string name="option_4">Option 4</string>
    <string name="option_3">Option 3</string>
    <string name="option_2">Option 2</string>
    <string name="option_1">Option 1</string>
    <string name="question">Question</string>
    <string name="time_00">Time - 00</string>
    <string name="score_00">Score - 00</string>
    <string name="_1_6">1/10</string>
    <string name="basic_quiz_app">Basic Quiz App</string>
    <string name="quiz_over">Quiz Over</string>
    <string name="_6">1/6</string>
    <string name="play_again">Play Again</string>
</resources>